# novel_mcp

./: .env.example  .gitignore  EXPERIMENTATION.md  README.md  SUBMISSIONS.md  TODO.md  agntcon-mcpcon-proposal.md  demo.txt  main.py  paper-v1.docx  paper-v1.md  paper-v1.tex  pyproject.toml  requirements.txt  workflow.md
.claude/: settings.local.json
docs/: PROJECT_STRUCTURE.md  SYSTEM_GUIDE.md
eval/: FIXTURES_NOTE.md  README.md  RUNNING_EXPERIMENTS.md  run_evaluation.py  seed_ground_truth.py
mcp_client/: README.md  chat_client.py  eval_agent.py  requirements.txt
mcp_client/prompts/: agent_system_prompt.txt  eval_agent_prompt.txt
mcp_server/: __init__.py
mcp_server/core/: candidate_selector.py  feedback.py  graph_builder.py  pipeline.py  risk_engine.py  scanner.py  semantic_inference.py  validators.py
mcp_server/prompts/: reasoning_prompt.txt
mcp_server/server/: config.py  main.py  routes.py  schemas.py
mcp_server/utils/: file_utils.py  linux_utils.py  llm.py
